--- a/app/views/images/_navbar.html.haml
+++ b/app/views/images/_navbar.html.haml
@@ -1,6 +1,12 @@
 - content_for :navbar_right do
-  .right.menu
-    - if policy(Image).create?
-      .ui.item
-        = active_link_to new_image_path, class: "ui inverted green icon button", class_active: "active" do
-          %i.cloud.upload.icon
+  - if policy(Image).create?
+    .ui.item
+      = active_link_to new_image_path, class: "ui inverted green icon button", class_active: "active" do
+        %i.cloud.upload.icon
+
+  .ui.category.search.item{ data: { behavior: "search-images" } }
+    .ui.icon.input
+      = form_tag search_images_path, method: :get do
+        = search_field_tag "q", params[:q], class: "ui prompt", placeholder: "Search Images ...", aria: { label: "Search" }
+      %i.search.icon
+    .results
