--- a/app/views/profiles/_password_form.html.haml
+++ b/app/views/profiles/_password_form.html.haml
@@ -1,14 +1,23 @@
-= form_tag profile_path, method: :patch, class: "ui large form" do
+= form_tag password_profile_path, method: :patch, class: "ui form" do
   .ui.error.message
-  .ui.stacked.segment
-    .field
+
+  .ui.segment
+    .required.field
+      = label_tag "current_password", "Current Password"
+      .ui.left.icon.input
+        %i.lock.icon
+        = password_field_tag "current_password", "", placeholder: "**************"
+
+    .required.field
+      = label_tag "password", "New Password"
       .ui.left.icon.input
         %i.lock.icon
         = password_field_tag "password", "", placeholder: "**************"
 
-    .field
+    .required.field
+      = label_tag "password_confirmation", "Confirm New Password"
       .ui.left.icon.input
         %i.lock.icon
         = password_field_tag "password_confirmation", "", placeholder: "**************"
 
-    = submit_tag "Change", class: "ui fluid large green submit button"
+    = submit_tag "Change", class: "ui green submit button"
