--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,9 +1,43 @@
 - content_for :page_title do
-  Your Profile
+  Profile
 
 - content_for :body do
-  .ui.middle.aligned.center.aligned.grid
-    .ui.centered.row
-      .column
+  .ui.grid
+    .ui.four.wide.column
+      .ui.row
+        .ui.vertical.menu
+          .item Basic Info
+          .item Security
+          .item API Keys
+
+    .ui.twelve.wide.column
+      .ui.row
         %h2.ui.header
-          .content You!
+          .content Basic Info
+
+        .ui.list
+          .item
+            .content
+              .header Username
+              .description Used only for personalizing the site and communcations; It does not have to be unique
+
+          .item
+            .content
+              .header Email
+              .description Used to contact you, help recover a lost password and identify you during login; It does have to be unique.
+
+        = render partial: "form", locals: { user: @user }
+
+      .ui.row
+        .ui.divider
+
+        %h2.ui.header
+          .content Security
+
+        = render partial: "password_form"
+
+      .ui.row
+        .ui.divider
+
+        %h2.ui.header
+          .content API Keys
