--- a/app/views/profiles/_form.html.haml
+++ b/app/views/profiles/_form.html.haml
@@ -1,14 +1,22 @@
-= form_tag profile_path, method: :patch, class: "ui large form" do
-  .ui.error.message
-  .ui.stacked.segment
+= form_for user, url: profile_path, method: :post, html: { class: "ui form" } do |f|
+  - if user.errors.any?
+    .ui.message.error
+      %h2= "#{ pluralize user.errors.count, "error" } prohibited this user from being saved:"
+      %ul
+        - user.errors.full_messages.each do |message|
+          %li= message
+
+  .ui.segment
     .field
+      = f.label :username
       .ui.left.icon.input
         %i.user.icon
-        = text_field_tag "username", @user.username, placeholder: "Email"
+        = f.text_field :username, placeholder: "Email"
 
     .field
+      = f.label :email
       .ui.left.icon.input
         %i.user.icon
-        = text_field_tag "email", @user.email, placeholder: "Email"
+        = f.text_field :email, placeholder: "Email"
 
-    = submit_tag "Update", class: "ui fluid large green submit button"
+    = f.submit "Update", class: "ui green submit button"
