--- a/app/views/profiles/_form.html.haml
+++ b/app/views/profiles/_form.html.haml
@@ -19,4 +19,4 @@
         %i.user.icon
         = f.text_field :email, placeholder: "Email"
 
-    = f.submit "Update", class: "ui green submit button"
+    = f.submit "Update", class: "ui right floated green submit button"
