--- a/app/views/profiles/_password_form.html.haml
+++ b/app/views/profiles/_password_form.html.haml
@@ -20,4 +20,4 @@
         %i.lock.icon
         = password_field_tag "password_confirmation", "", placeholder: "**************"
 
-    = submit_tag "Change", class: "ui green submit button"
+    = submit_tag "Change", class: "ui right floated green submit button"
