--- a/app/views/bookmarks/index.html.haml
+++ b/app/views/bookmarks/index.html.haml
@@ -8,6 +8,13 @@
     %h1 Your Bookmarks
 
   .ui.row
+    .ui.search
+      .ui.icon.input
+        = form_tag search_bookmarks_path, method: :get do
+          = search_field_tag "q", params[:q], class: "ui prompt", placeholder: "Search ...", aria: { label: "search" }
+        %i.search.icon
+
+  .ui.row
     .ui.divider
 
   = render partial: "bookmark_list", locals: { bookmarks: @bookmarks }
