does this work for invites?

--- a/app/views/profiles/_form.html.haml
+++ b/app/views/profiles/_form.html.haml
@@ -11,7 +11,7 @@
       = f.label :username
       .ui.left.icon.input
         %i.user.icon
-        = f.text_field :username, placeholder: "Email"
+        = f.text_field :username, placeholder: "Username"
 
     .field
       = f.label :email
