--- a/app/views/invites/show.html.haml
+++ b/app/views/invites/show.html.haml
@@ -1,46 +1,57 @@
 - content_for :page_title do
-  = @invite.title
+  = @invitation.title
 
-- content_for :non_fluid_body do
-  .ui.middle.aligned.center.aligned.grid
-    .column
-      %h2.ui.header
-        .content= @invite.title
+- content_for :body do
+  .ui.row
+    %h2.ui.header
+      .content= @invitation.title
 
-      %p
-        = @invite.description
+    %p
+      = @invitation.description
 
-      = form_for @user, url: invite_path(@invite.code), method: :patch, class: "ui form" do
-        - if @user.errors.any?
-          .ui.message.error
-            %h2= "#{ pluralize @user.errors.count, "error" } prohibited this user from being saved:"
-            %ul
-              - @user.errors.full_messages.each do |message|
-                %li= message
+  .ui.row
+    = form_for @user, url: invite_path(@invitation.code), method: :patch, class: "ui form" do |f|
+      - if @user.errors.any?
+        .ui.message.error
+          %h2= "#{ pluralize @user.errors.count, "error" } prohibited this user from being saved:"
+          %ul
+            - @user.errors.full_messages.each do |message|
+              %li= message
 
-        .ui.segment
-          .required.field
-            = f.label :username
-            .ui.left.icon.input
-              %i.user.icon
-              = f.text_field :username, placeholder: "Username"
+      .ui.segment
+        .ui.list
+          .item
+            .content
+              .header Username
+              .description Used only for personalizing the site and communications; It does not have to be unique
 
-          .required.field
-            = f.label :email
-            .ui.left.icon.input
-              %i.user.icon
-              = f.text_field :email, placeholder: "Email"
+          .item
+            .content
+              .header Email
+              .description Used to contact you, help recover a lost password and identify you during login; It does have to be unique.
 
-          .required.field
-            = f.label :password
-            .ui.left.icon.input
-              %i.lock.icon
-              = f.password_field :password, placeholder: "**************"
+        .required.field
+          = f.label :username
+          .ui.left.icon.input
+            %i.user.icon
+            = f.text_field :username, placeholder: "Username"
 
-          .required.field
-            = f.label :password_confirmation
-            .ui.left.icon.input
-              %i.lock.icon
-              = f.password_field :password_confirmation, placeholder: "**************"
+        .required.field
+          = f.label :email
+          .ui.left.icon.input
+            %i.user.icon
+            = f.text_field :email, placeholder: "Email"
 
-          = f.submit "Register", class: "ui right floated green submit button"
+        .required.field
+          = f.label :password
+          .ui.left.icon.input
+            %i.lock.icon
+            = f.password_field :password, placeholder: "**************"
+
+        .required.field
+          = f.label :password_confirmation
+          .ui.left.icon.input
+            %i.lock.icon
+            = f.password_field :password_confirmation, placeholder: "**************"
+
+        = f.submit "Register", class: "ui right floated green submit button"
