--- a/app/views/profiles/_form.html.haml
+++ b/app/views/profiles/_form.html.haml
@@ -7,13 +7,24 @@
           %li= message
 
   .ui.segment
-    .field
+    .ui.list
+      .item
+        .content
+          .header Username
+          .description Used only for personalizing the site and communications; It does not have to be unique
+
+      .item
+        .content
+          .header Email
+          .description Used to contact you, help recover a lost password and identify you during login; It does have to be unique.
+
+    .required.field
       = f.label :username
       .ui.left.icon.input
         %i.user.icon
         = f.text_field :username, placeholder: "Username"
 
-    .field
+    .required.field
       = f.label :email
       .ui.left.icon.input
         %i.user.icon
