faq page scaffold

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -44,6 +44,6 @@
     .ui.horizontal.inverted.small.divided.link.list
       -#.item Site Map
       .item me (at) transientbug.ninja
-      .item FAQ
+      .item= link_to "FAQ", faq_path
       -#.item Terms and Conditions
       -#.item Privacy Policy
