fix password reset form

--- a/app/views/profiles/_password_form.html.haml
+++ b/app/views/profiles/_password_form.html.haml
@@ -1,4 +1,4 @@
-= form_tag password_profile_path, method: :patch, class: "ui form" do
+= form_tag password_profile_path, method: :post, class: "ui form" do
   .ui.error.message
 
   .ui.segment
