--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -21,6 +21,7 @@
           %i.dropdown.icon
           .menu
             = link_to "Profile", profile_path, class: "item"
+            = link_to "Admin Panel", admin_root_path, class: "item"
             = link_to "Logout", logout_path, class: "item"
       - else
         = link_to "Login", login_path, class: "item"
