add unique email, service announcement model

--- a/app/views/layouts/admin/_body.html.haml
+++ b/app/views/layouts/admin/_body.html.haml
@@ -1,7 +1,7 @@
 = render partial: "layouts/admin/navbar"
 
 .ui.pusher
-  .ui.main.container
+  .ui.grid
     = semantic_flash
 
     = content_for :body
