more admin work

--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -5,7 +5,7 @@
 = content_for :meta
 
 %title
-  TransientBug #{ content_for :page_title }
+  transientBug #{ content_for :page_title }
 
 = csrf_meta_tags
 
