--- a/app/views/layouts/admin/_head.html.haml
+++ b/app/views/layouts/admin/_head.html.haml
@@ -5,8 +5,8 @@
 = content_for :meta
 
 %title
-  TransientBug Admin #{ content_for :page_title }
+  transientBug Admin #{ content_for :page_title }
 
 = csrf_meta_tags
 
-= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": "reload"
+= stylesheet_link_tag "admin", media: "all", "data-turbolinks-track": "reload"
