--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -30,3 +30,5 @@
 
     %h2.ui.header
       .content API Key
+
+    %p Coming soon! A functioning API and maybe some browser extensions are the next thing to be built!
