--- a/app/views/layouts/admin/_body.html.haml
+++ b/app/views/layouts/admin/_body.html.haml
@@ -1,9 +1,7 @@
 = render partial: "layouts/admin/navbar"
 
 .ui.pusher
-  .ui.grid
+  .ui.main.horizontally.padded.grid
     = semantic_flash
 
     = content_for :body
-
-  = content_for :non_fluid_body
