--- a/app/views/layouts/admin/_navbar.html.haml
+++ b/app/views/layouts/admin/_navbar.html.haml
@@ -1,19 +1,18 @@
-.computer.only.ui.top.fixed.inverted.red.menu
-  .ui.container
-    = link_to admin_root_path, class: "header item" do
-      = image_tag "bug_logo.png", class: "logo"
-      transientBug Admin
+.ui.top.fixed.inverted.red.menu
+  = link_to admin_root_path, class: "header item" do
+    = image_tag "bug_logo.png", class: "logo"
+    transientBug Admin
 
-    = active_link_to "Home", admin_root_path, class: "item"
+  = active_link_to "Home", admin_root_path, class: "item"
 
-    = content_for :navbar
+  = content_for :navbar
 
-    .right.menu
-      = content_for :navbar_right
+  .right.menu
+    = content_for :navbar_right
 
-      .ui.simple.dropdown.item
-        = current_user.username
-        %i.dropdown.icon
-        .menu
-          = link_to "Exit Admin", root_path, class: "item"
-          = link_to "Logout", logout_path, class: "item"
+    .ui.simple.dropdown.item
+      = current_user.username
+      %i.dropdown.icon
+      .menu
+        = link_to "Exit Admin", root_path, class: "item"
+        = link_to "Logout", logout_path, class: "item"
