--- a/app/views/layouts/admin/_body.html.haml
+++ b/app/views/layouts/admin/_body.html.haml
@@ -53,6 +53,8 @@
 
 .ui.pusher
   .ui.main.horizontally.padded.grid
-    = semantic_flash
+    .row
+      .column
+        = semantic_flash
 
     = content_for :body
