disable sidekiq link in prod

--- a/app/views/admin/home/home.html.haml
+++ b/app/views/admin/home/home.html.haml
@@ -36,4 +36,4 @@
       %h2.dividing.header misc
 
       .ui.list
-        = link_to "sidekiq", sidekiq_web_path, data: { turbolinks: false }, class: "item"
+        = link_to "sidekiq", sidekiq_web_path, data: { turbolinks: false }, class: "item" if Rails.env.development?
