basic invite show view

--- a/app/views/admin/invitations/index.html.haml
+++ b/app/views/admin/invitations/index.html.haml
@@ -12,29 +12,43 @@
         %thead
           %tr
             %th.collapsing= check_box_tag "select-all", data: { behaviour: "select-all" }
+            %th.collapsing Actions
             %th Code
             %th Title
             %th Description
             %th Internal Note
             %th.collapsing Limit
             %th.collapsing Created At
-            %th.collapsing Actions
         %tbody
           - if @invitations.any?
             - @invitations.each do |invitation|
               %tr
                 %td= check_box_tag "select-#{ invitation.id }", data: { behaviour: "select" }
-                %td= invitation.code
-                %td= invitation.title
-                %td= invitation.description.truncate 120
-                %td= invitation.internal_note.truncate 240
-                %td= invitation.limit
-                %td= invitation.created_at.to_s(:long)
                 %th
                   .ui.buttons
-                    = link_to "edit", edit_admin_invitation_path(invitation), class: "ui blue button"
-                    .or
-                    = link_to "destroy", admin_invitation_path(invitation), method: :destroy, data: { confirm: "really?!?" }, class: "ui negative button"
+                    = link_to "view", admin_invitation_path(invitation), class: "ui button"
+                    .ui.simple.dropdown.icon.button
+                      %i.dropdown.icon
+                      .menu
+                        = link_to edit_admin_invitation_path(invitation), class: "item" do
+                          %i.edit.icon
+                          edit
+
+                        .header
+                          %i.warning.sign.icon
+                          DANGERZONE
+                        .divider
+
+                        = link_to admin_invitation_path(invitation), method: :destroy, data: { confirm: "really?!?" }, class: "error item" do
+                          %i.delete.icon
+                          destroy
+
+                %td= invitation.code
+                %td= invitation.title
+                %td= invitation.description&.truncate 120
+                %td= invitation.internal_note&.truncate 240
+                %td= invitation.limit
+                %td= invitation.created_at.to_s(:long)
 
           - else
             %tr
