--- a/app/views/admin/invitations/show.html.haml
+++ b/app/views/admin/invitations/show.html.haml
@@ -28,7 +28,7 @@
                 %i.trash.icon
                 delete
 
-      %h2.dividing.header.item Internal Stuff
+      %h2.ui.dividing.header Internal Stuff
       %p= @invitation.internal_note
 
       %h2.ui.dividing.header Quick Info
