--- a/app/assets/javascripts/admin/templates/invitations/delete.jst.ejs
+++ b/app/assets/javascripts/admin/templates/invitations/delete.jst.ejs
@@ -4,13 +4,25 @@
     Delete Invitation?
   </div>
   <div class="content">
-    <p>Are you sure you want to delete this invitation titled "<%= title %>" with code "<%= code %>"?</p>
-    <p>Doing so will prevent anyone with the code from registering. You should consider disabling it instead of a hard delete.</p>
+    <p>Are you sure you want to delete this invitation?</p>
+    <p>Doing so will prevent anyone with the code from registering, which could potentially be irresponsible.</p>
+    <table class="table">
+      <tbody>
+        <tr>
+          <td>Title</td>
+          <td><%= title %></td>
+        </tr>
+        <tr>
+          <td>Code</td>
+          <td><%= code %></td>
+        </tr>
+      </tbody>
+    </table>
   </div>
   <div class="actions">
     <div class="ui green basic cancel inverted button">
       <i class="remove icon"></i>
-      No
+      Cancel!
     </div>
     <a href="<%= url %>" data-method="delete" rel="nofollow" class="ui red ok inverted button">
       <i class="checkmark icon"></i>
