--- a/app/views/admin/invitations/index.html.haml
+++ b/app/views/admin/invitations/index.html.haml
@@ -1,6 +1,19 @@
 - content_for :page_title do
   Invitations
 
+- content_for :menu do
+  .item.hidden{ data: { behavior: "bulk-edit-menu" } }
+    .menu
+      .header Bulk Actions
+
+      .item
+        %i.hide.icon
+        disable all
+
+      .item
+        %i.trash.icon
+        delete all
+
 - content_for :body do
   .ui.two.wide.column
     .ui.row
@@ -11,7 +24,7 @@
       %table.ui.celled.table
         %thead
           %tr
-            %th= check_box_tag "select-all", data: { behavior: "select-all" }
+            %th= check_box_tag "select-all", nil, false, data: { behavior: "select-all" }
             %th Actions
             %th Code
             %th Title
@@ -24,7 +37,7 @@
           - if @invitations.any?
             - @invitations.each do |invitation|
               %tr
-                %td.collapsing= check_box_tag "select-#{ invitation.id }", data: { id: invitation.id, behavior: "select" }
+                %td.collapsing= check_box_tag "select-#{ invitation.id }", nil, false, data: { id: invitation.id, behavior: "select" }
                 %td.collapsing
                   .ui.buttons
                     = link_to admin_invitation_path(invitation), class: "ui icon button" do 
