--- a/app/views/admin/invitations/_menu.html.haml
+++ b/app/views/admin/invitations/_menu.html.haml
@@ -1,4 +1,4 @@
-.ui.fluid.vertical.menu
+.ui.fluid.vertical.menu.sticky{ data: { behavior: "sticky", context: "#stickContext", offset: 75 } }
   .item
     .header
       Invitations
