--- a/app/views/admin/invitations/index.html.haml
+++ b/app/views/admin/invitations/index.html.haml
@@ -3,16 +3,19 @@
 
 - content_for :menu do
   .item.hidden{ data: { behavior: "bulk-edit-menu" } }
+    .divider
+    .header Bulk Actions
     .menu
-      .header Bulk Actions
+      .item
+        .ui.fluid.icon.button
+          %i.hide.icon
+          disable all
 
       .item
-        %i.hide.icon
-        disable all
+        .ui.fluid.icon.negative.basic.button
+          %i.trash.icon
+          delete all
 
-      .item
-        %i.trash.icon
-        delete all
 
 - content_for :body do
   .ui.two.wide.column
@@ -21,7 +24,7 @@
 
   .ui.fourteen.wide.column
     .ui.row
-      %table.ui.celled.table
+      %table.ui.celled.table#stickContext
         %thead
           %tr
             %th= check_box_tag "select-all", nil, false, data: { behavior: "select-all" }
@@ -73,5 +76,4 @@
               %td{ colspan: 6 }
                 No invitations made yet
 
-    .ui.row
       = paginate @invitations
