--- a/app/views/admin/users/_menu.html.haml
+++ b/app/views/admin/users/_menu.html.haml
@@ -1,4 +1,4 @@
-.ui.fluid.vertical.menu
+.ui.fluid.vertical.menu.sticky{ data: { behavior: "sticky", context: "#stickContext", offset: 75 } }
   .item
     .header
       Users
@@ -17,3 +17,5 @@
       = form_tag admin_invitations_path, method: :get do
         = search_field_tag "q", params[:q], class: "ui prompt", placeholder: "Search ...", aria: { label: "search" }
       %i.search.link.icon
+
+  = content_for :menu
