basic admin bookmarks

--- a/app/views/admin/users/show.html.haml
+++ b/app/views/admin/users/show.html.haml
@@ -62,4 +62,7 @@
               = @user.created_at.to_s(:long)
 
       %h2.ui.dividing.header Bookmarks
+      %p Coming soon
+
       %h2.ui.dividing.header Images
+      %p Coming soon
