refactor bookmarks view

--- a/app/views/bookmarks/_bookmark_list_item.html.haml
+++ b/app/views/bookmarks/_bookmark_list_item.html.haml
@@ -2,7 +2,7 @@
   %i.bookmark.icon
   .content
     .item
-      = link_to bookmark_cache_path(bookmark), data: { turbolinks: false }, class: "archive-link" do
+      = link_to bookmark_cache_index_path(bookmark), data: { turbolinks: false }, class: "archive-link" do
         %i.archive.icon
 
       = link_to bookmark.title, bookmark_path(bookmark)
