--- a/app/views/bookmarks/index.html.haml
+++ b/app/views/bookmarks/index.html.haml
@@ -7,14 +7,43 @@
   .ui.row
     %h1 Your Bookmarks
 
-  .ui.row
-    .ui.search
-      .ui.icon.input
-        = form_tag search_bookmarks_path, method: :get do
-          = search_field_tag "q", params[:q], class: "ui prompt", placeholder: "Search ...", aria: { label: "search" }
-        %i.search.icon
+    - if @bookmarks.any?
+      .ui.feed
+        - @bookmarks.each do |bookmark|
+          .event
+            .label
+              %i.bookmark.icon
+            .content
+              .summary
+                = check_box_tag "select-#{ bookmark.id }", nil, false, data: { id: bookmark.id, behavior: "select" }
+                = link_to bookmark.title, bookmark_path(bookmark), class: "title"
+                .date= bookmark.created_at.to_s(:long)
 
-  .ui.row
-    .ui.divider
+              = link_to bookmark.uri_string, bookmark.uri_string
 
-  = render partial: "bookmark_list", locals: { bookmarks: @bookmarks }
+              - if bookmark.description.present?
+                = bookmark.description&.truncate(240)
+                = link_to "read more", bookmark_path(bookmark)
+
+              .ui.fluid.text.menu
+                .ui.item
+                  %i.tags.icon
+                  = bookmark.tags.length
+                  = "tag".pluralize(bookmark.tags.length)
+                = link_to "offline cache", bookmark_cache_index_path(bookmark), data: { turbolinks: false }, class: "ui item"
+                = link_to "edit", edit_bookmark_path(bookmark), class: "ui item"
+                .ui.right.floated.red.item{ data: { behavior: "modal", template: "public/templates/bookmarks/delete", url: bookmark_path(bookmark), uri: bookmark.uri_string, title: bookmark.title } }
+                  delete
+
+              .ui.divider
+
+    - else
+      %h1.huge.center.aligned.icon.header
+        %i.bookmark.icon
+        .content No bookmarks found!
+
+      %p
+        Maybe
+        = link_to "make one?", new_bookmark_path
+
+    = paginate @bookmarks
