--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -22,7 +22,7 @@
           %i.dropdown.icon
           .menu
             = link_to "Profile", profile_path, class: "item"
-            = link_to "Admin Panel", admin_root_path, class: "item"
+            = link_to "Admin Panel", admin_root_path, class: "item" if current_user.role? :admin
             = link_to "Logout", logout_path, class: "item"
 
       - else
