working on refactor of the bookmarks views

--- a/app/views/bookmarks/_navbar.html.haml
+++ b/app/views/bookmarks/_navbar.html.haml
@@ -6,7 +6,7 @@
 
   .ui.category.search.item{ data: { behavior: "search-bookmarks" } }
     .ui.icon.input
-      = form_tag search_bookmarks_path, method: :get do
+      = form_tag bookmarks_search_index_path, method: :get do
         = search_field_tag "q", params[:q], class: "ui prompt", placeholder: "Search Bookmarks ...", aria: { label: "Search" }
       %i.search.icon
     .results
