--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,3 +37,9 @@
   margin: 5em 0em 0em;
   padding: 5em 0em;
 }
+
+.ui.menu {
+  & > .item.hidden, & > .item.right.hidden {
+    display: none;
+  }
+}
