new bookmark if signed in

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -13,7 +13,7 @@
     = content_for :navbar
 
     .right.menu
-      - if policy(Bookmark).create?
+      - if signed_in?
         .ui.item
           = active_link_to new_bookmark_path, class: "ui inverted green icon button", class_active: "active" do
             %i.bookmark.icon
