--- a/app/assets/javascripts/admin/templates/invitations/delete.jst.ejs
+++ b/app/assets/javascripts/admin/templates/invitations/delete.jst.ejs
@@ -5,7 +5,7 @@
   </div>
   <div class="content">
     <p>Are you sure you want to delete this invitation?</p>
-    <p>Doing so will prevent anyone with the code from registering, which could potentially be irresponsible.</p>
+    <p>Doing so will prevent anyone with the code from registering which is potentially irresponsible.</p>
     <table class="table">
       <tbody>
         <tr>
