move common JS code out into its own file to reduce copy pasta

--- a/app/views/bookmarks/_form.html.haml
+++ b/app/views/bookmarks/_form.html.haml
@@ -29,6 +29,6 @@
 
   .field
     = f.label :tags
-    = f.select :tags, bookmark.tags.map { |t| [ t.label, t.label ] }, {}, { multiple: true, class: "ui multiple search selection dropdown", data: { behavior: "autocomplete-tags" } }
+    = f.select :tags, bookmark.tags.map { |t| [ t.label, t.label ] }, {}, { multiple: true, class: "ui multiple search selection dropdown", data: { behavior: "autocomplete-bookmark-tags" } }
 
   = f.submit "Save", class: "ui positive right floated submit button"
