--- a/app/views/layouts/_body.html.haml
+++ b/app/views/layouts/_body.html.haml
@@ -2,6 +2,8 @@
 
 .ui.pusher
   .ui.main.container
+    = render partial: "layouts/service_announcements", locals: { service_announcements: @active_service_announcements }
+
     = semantic_flash
 
     = content_for :body
