--- a/app/views/layouts/admin/_body.html.haml
+++ b/app/views/layouts/admin/_body.html.haml
@@ -55,6 +55,8 @@
   .ui.main.horizontally.padded.grid
     .row
       .column
+        = render partial: "layouts/service_announcements", locals: { service_announcements: @active_service_announcements }
+
         = semantic_flash
 
     = content_for :body
