--- a/app/views/pages/main.html.haml
+++ b/app/views/pages/main.html.haml
@@ -1,2 +1,22 @@
 - content_for :page_title do
   Home
+
+%h2.ui.header transientBug
+%p
+  transientBug offers basic bookmark functionality, akin to pocket, pinboard, delicious and others, but with a few benifits:
+  %ul.list
+    %li
+      %b Cheap
+      If it works out well I might look into some low cost plans, but for now its free.
+    %li
+      %b Simple
+      It should be featurefull and advanced where applicable, but the interface should try to remain as simple as I can make it (This is a work in progress).
+    %li
+      %b No Tracking
+      This might be shocking, if you know me in real life as I work on an analytics team, but I don't want to be tracking every movement around the site that a user makes. No tracking or ads. Ever.
+      Currently there is still a font loaded from google, but once I find a replacement for it that I like, there won't be any third party scripts, styles, fonts or other loaded.
+    %li
+      %b Hard Deletes
+      Going with the above point, if you delete a bookmark, its
+      %u gone
+      and is not going to come back out of the blue.
