--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,9 +1,7 @@
 - content_for :page_title do
   Home
 
-- content_for :body do
-  .ui.row
-    %h4.header Hia #{ current_user.username }!
+%h4.ui.header Hia #{ current_user.username }!
 
-    %h2.dividing.header Most recent bookmarks
-    = render partial: "bookmarks/bookmarks_list", locals: { bookmarks: @recent_bookmarks }
+%h2.ui.dividing.header Most recent bookmarks
+= render partial: "bookmarks/bookmarks_list", locals: { bookmarks: @recent_bookmarks }
