--- a/app/views/admin/invitations/show.html.haml
+++ b/app/views/admin/invitations/show.html.haml
@@ -42,14 +42,9 @@
               = @invitation.code
           %tr
             %td
-              %b Limit
+              %b Currentlt Available
             %td
-              = @invitation.limit
-          %tr
-            %td
-              %b Current Available
-            %td
-              = @invitation.current
+              = @invitation.available
           %tr
             %td
               %b Created At
