first pass at review items

--- a/app/views/layouts/_body.html.haml
+++ b/app/views/layouts/_body.html.haml
@@ -2,7 +2,7 @@
 
 .ui.pusher
   .ui.main.container
-    = render partial: "layouts/service_announcements", locals: { service_announcements: @active_service_announcements }
+    = render_service_announcements
 
     = semantic_flash
 
