--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -14,6 +14,8 @@
           - if Rails.env.development?
             .item= link_to "Dev Auth", auth_path(:developer)
 
+          .item= link_to "API Docs", apitome.root_path
+
       .three.wide.column
         %h4.ui.inverted.header All the Love!
         %p
@@ -35,7 +37,7 @@
 
       .seven.wide.column
         %h4.ui.inverted.header transientBug
-        %p Dedicated to being the personal storagemahjigger for these newfangled anima-motion stillframes called "gah-iffs"
+        %p Dedicated to being the personal storagemahjigger for these newfangled anima-motion stillframes called "gah-iffs" and bookmarks.
 
     .ui.inverted.section.divider
 
