better upserts with a rails 5 attribute on the webpages and controller methods
this should handle upserts and updating with tags a lot better than before, although dealing with the tags
array is still a pain and its a bit messy, but maybe this'll work for now?

--- a/app/views/bookmarks/_form.html.haml
+++ b/app/views/bookmarks/_form.html.haml
@@ -7,8 +7,8 @@
           %li= message
 
   .required.field
-    = f.label :uri_string
-    = f.text_field :uri_string, aria: { describedby: "Bookmark URL" }
+    = f.label :uri
+    = f.text_field :uri, aria: { describedby: "Bookmark URL" }
 
   .required.field
     = f.label :title
