--- a/app/views/bookmarks/_form.html.haml
+++ b/app/views/bookmarks/_form.html.haml
@@ -8,7 +8,7 @@
 
   .required.field
     = f.label :uri
-    = f.text_field :uri, aria: { describedby: "Bookmark URL" }
+    = f.uri_field :uri, aria: { describedby: "Bookmark URL" }, value: bookmark.uri.to_s
 
   .required.field
     = f.label :title
